[gd_scene load_steps=2 format=2]

[ext_resource path="res://myDialoge.gd" type="Script" id=1]

[node name="Control" type="Control"]
margin_right = 800.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="InputText" type="TextEdit" parent="."]
margin_left = 88.0
margin_top = 215.0
margin_right = 490.0
margin_bottom = 344.0
custom_colors/font_color = Color( 0.92549, 0.756863, 0.0235294, 1 )
custom_colors/background_color = Color( 0.152941, 0.129412, 0.831373, 1 )
highlight_current_line = true
show_line_numbers = true
wrap_enabled = true
caret_block_mode = true
caret_blink = true

[node name="SaveDialog" type="FileDialog" parent="."]
margin_left = 290.0
margin_top = 182.0
margin_right = 771.0
margin_bottom = 464.0
popup_exclusive = true
window_title = "Datei speichern"
resizable = true
access = 2

[node name="OpenDialog" type="FileDialog" parent="."]
margin_left = 290.0
margin_top = 182.0
margin_right = 771.0
margin_bottom = 463.0
popup_exclusive = true
window_title = "Datei Ã¶ffnen"
resizable = true
mode = 0
access = 2

[node name="PasswordLabel" type="Label" parent="."]
margin_left = 88.0
margin_top = 136.0
margin_right = 152.0
margin_bottom = 150.0
text = "Password:"

[node name="InfoLabel" type="Label" parent="."]
margin_left = 88.0
margin_top = 191.0
margin_right = 152.0
margin_bottom = 205.0
text = "Input:"

[node name="DeCryptButton" type="Button" parent="."]
margin_left = 597.0
margin_top = 161.0
margin_right = 662.0
margin_bottom = 181.0
text = "DeCrypt"

[node name="EnCryptButton" type="Button" parent="."]
margin_left = 524.0
margin_top = 161.0
margin_right = 589.0
margin_bottom = 181.0
text = "EnCrypt"

[node name="MsgDialog" type="AcceptDialog" parent="."]
margin_left = 227.0
margin_top = 190.0
margin_right = 404.0
margin_bottom = 302.0
popup_exclusive = true
window_title = "Attention"
resizable = true
dialog_autowrap = true

[node name="PasswordShow" type="Label" parent="."]
margin_left = 449.0
margin_top = 123.0
margin_right = 513.0
margin_bottom = 154.0
text = "Password
Show:"

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 437.0
margin_top = 154.0
margin_right = 513.0
margin_bottom = 194.0
focus_mode = 0
enabled_focus_mode = 0

[node name="KeyFieldLine" type="LineEdit" parent="."]
margin_left = 88.0
margin_top = 161.0
margin_right = 431.0
margin_bottom = 185.0
secret = true

[node name="Output" type="TextEdit" parent="."]
margin_left = 88.0
margin_top = 386.0
margin_right = 490.0
margin_bottom = 518.0
readonly = true

[node name="CounterButton" type="Button" parent="."]
anchor_top = 11.25
anchor_bottom = 11.25
margin_left = 513.0
margin_top = -6438.0
margin_right = 665.0
margin_bottom = -6418.0
text = "Counter"

[node name="AutoFillButton" type="Button" parent="."]
margin_left = 524.0
margin_top = 386.0
margin_right = 676.0
margin_bottom = 406.0
text = "Auto-fill texts and key"

[node name="DetailsDialog" type="WindowDialog" parent="."]
margin_left = 111.0
margin_top = 223.0
margin_right = 490.0
margin_bottom = 385.0
window_title = "Set Generate"

[node name="HSlider" type="HSlider" parent="DetailsDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -17.0
margin_right = 138.0
margin_bottom = 17.0
min_value = 16.0
max_value = 4096.0
value = 16.0
tick_count = 60
ticks_on_borders = true

[node name="LabelCounterSlider" type="Label" parent="DetailsDialog/HSlider"]
margin_left = 116.5
margin_top = -51.0
margin_right = 174.5
margin_bottom = -37.0
text = "Counter: "

[node name="SpinBox" type="SpinBox" parent="DetailsDialog/HSlider"]
margin_left = 116.5
margin_top = -27.0
margin_right = 190.5
margin_bottom = -3.0
min_value = 16.0
max_value = 4096.0
value = 16.0
exp_edit = true

[node name="Button" type="Button" parent="DetailsDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = 40.0
margin_right = 22.0
margin_bottom = 60.0
text = "Okay"

[node name="DetailsButton" type="Button" parent="."]
margin_left = 620.0
margin_top = 410.0
margin_right = 677.0
margin_bottom = 430.0
text = "Details"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 513.0
margin_top = 215.0
margin_right = -134.0
margin_bottom = -293.0

[node name="OpenButton" type="Button" parent="VBoxContainer"]
margin_right = 153.0
margin_bottom = 20.0
text = "Open"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 153.0
margin_bottom = 44.0
text = "Save"

[node name="ResetButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 153.0
margin_bottom = 68.0
text = "Reset"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 153.0
margin_bottom = 92.0
text = "Exit"

[node name="InfoResultat" type="Label" parent="."]
margin_left = 88.0
margin_top = 360.0
margin_right = 152.0
margin_bottom = 374.0
text = "Output:"

[node name="InfoLabelMSG" type="Label" parent="."]
margin_left = 88.0
margin_top = 533.0
margin_right = 128.0
margin_bottom = 547.0
text = "Info:"

[node name="Info" type="Label" parent="InfoLabelMSG"]
margin_left = 40.0
margin_right = 402.0
margin_bottom = 14.0

[node name="ButtonCallDialog" type="Button" parent="."]
margin_left = 196.0
margin_top = 85.0
margin_right = 304.0
margin_bottom = 105.0
text = "Rufe Dialog auf"

[node name="TMeldung" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = -110.5
margin_right = 140.5
margin_bottom = 110.5
window_title = "TestDialog:"

[node name="Button" type="Button" parent="TMeldung"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -10.0
margin_right = 65.0
margin_bottom = 10.0
text = "Ok"

[connection signal="file_selected" from="SaveDialog" to="." method="_on_SaveDialog_file_selected"]
[connection signal="file_selected" from="OpenDialog" to="." method="_on_OpenDialog_file_selected"]
[connection signal="pressed" from="EnCryptButton" to="." method="_on_EnCryptButton_pressed"]
[connection signal="pressed" from="CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="CounterButton" to="." method="_on_CounterButton_pressed"]
[connection signal="pressed" from="AutoFillButton" to="." method="_on_AutoFillButton_pressed"]
[connection signal="value_changed" from="DetailsDialog/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="DetailsDialog/HSlider/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="DetailsDialog/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="DetailsButton" to="." method="_on_DetailsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OpenButton" to="." method="_on_OpenButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ButtonCallDialog" to="." method="_on_ButtonCallDialog_pressed"]
